--- a/reservia.css
+++ b/reservia.css
@@ -4,7 +4,7 @@ body
     padding: inherit;
 }
 
-body,
+main,
 p,
 a,
 ul,
@@ -13,38 +13,99 @@ li
   margin: 0;
   margin-left: 1em;
   padding: 0;
-  text-decoration: none;
   font-family: "Raleway", sans-serif;
 }
 
 .header
 { 
     display: grid;
-    align-items: center; 
-    grid-template-columns: auto 1fr auto;
+    grid-template-columns: 180px 700px 225px 108px;
+    grid-auto-rows: minmax(100px, auto);
+}
+.logo
+{
+    padding: 12px;
+}
+
+.logo img
+{
+    order: 0;
+    padding-top: 12px;
 }
 
 nav
 {
+    display: grid;
+    grid-template-columns: 136px 88px;
+    grid-column: 3;
     margin-top: 0px; 
-    padding-top:20px; 
-    width: 50%; 
+    align-items: center;
+    order: 1;
     
 }
 
 nav ul
 {
-    
+    display: flex;
+    margin: 0;
     list-style-type: none;
+    text-decoration: none;
 }
 
+nav li 
+{
+    margin: 0;
+}
+
+.lienheader:hover
+{
+    display: none;
+}
+    
+.greyline 
+{
+    display: none;
+}
+
+.lienheader:hover
+{
+    border-top: #0065FC solid 4px;
+    padding-top: 48px;
+}
+
+.lienheader[data-active="true"]
+{
+    color: #0065FC;
+}
+
+.lienheader[data-active="false"]
+{
+    color: black;
+}
+
+.lienheader
+
+{
+    text-decoration: none;
+}
 
 .signup
 {
+    
+    display: flex;
+    align-items: center;
+    order: 2;
     color: #0065FC;
-    font-weight: 500;
+    font-weight: bold;
     font-family: 'Raleway', sans-serif;
 }
+
+main h1
+{
+    font-size: 25px;
+}
+
+/* Recherche */
 
 .paragraphe
 { 
@@ -71,6 +132,11 @@ nav ul
     border: 1px solid #f2f2f2;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
+}
+
+#searchbutton 
+{
+    display: none;
 }
 
 .recherche
@@ -170,10 +236,21 @@ nav ul
     padding: 10px 15px;
     border: solid 2px #f2f2f2;
     border-radius: 100%;
-    color: #0065FC;
+    color: #0065FC
 }
 
 /* herbergement */ 
+
+
+main
+{
+    margin-left: 2em;
+}
+
+main figure:hover
+{
+    transform: scale(1.02);
+}
 
 .firstline figure 
 {
@@ -268,11 +345,6 @@ nav ul
     list-style-type: none;
 }
 
-body
-{
-    margin-left: 2em;
-}
-
 .contenuhebergement p 
 {
     margin-left: 0;
@@ -302,15 +374,15 @@ body
 .hebergement h2
 {
     margin-left: 22px;
-    font-size: 21px;
+    font-size: 20px;
     margin: 21px;
 }
 
 #afficher
 {
     font-size: 16px;
-    font-weight: 710;
     padding-left: 7px;
+    font-weight: bold;
 }
 
 .lespopulaires
@@ -325,6 +397,12 @@ body
     border-radius: 1em;
 
     
+}
+
+.lespopulaires h3
+{
+    font-size: 15px;
+    margin-bottom: 7px;
 }
 
 .contenulespopulaires
@@ -369,6 +447,22 @@ article
 .captionpopulaires
 {
     flex-direction: column;
+    margin-left: 5px;
+}
+
+.lespopulaires:hover
+{
+    transform: scale(1.02);
+}
+
+.populaire ul 
+{
+    margin-left: 0;
+}
+
+.populaire p
+{
+    margin-bottom: 31px;
 }
 
 /* ACTIVITE */
@@ -376,6 +470,13 @@ article
 #activite
 {
     display: grid;
+    margin-top: 27px;
+}
+
+#activite h2
+{
+    font-size: 20px;
+    margin-bottom: 3px;
 }
 
 #activite figure
@@ -385,11 +486,428 @@ article
     box-shadow: 0 0 20px #0000002e;
     border-radius: 1rem;
     overflow: hidden;
-    width: 167px; 
+    width: 287px; 
+    cursor: pointer;
+    margin-right: 0;
 }
 
-.one
+.activite
 {
-    grid-column: 1;
-    grid-row: 1;
+    display: grid;
+    grid-template-columns: 288px 288px 288px 288px;
+    grid-gap: 22px;
+    margin-left: -4px;
 }
+
+.activite h3
+{
+    font-size: 17px;
+    padding-left: 18px;
+}
+
+.activite figure
+{
+    margin-left: 0;
+}
+
+.activite img
+{
+    height: 88%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.columnac img
+{
+    width: 100%;
+    object-fit: cover;
+    height: 70%;
+}
+
+.columnac h3
+{
+    margin-bottom: 2px;
+}
+
+.un
+{
+    grid-column: 1 / 2;
+    grid-row: 1 / 4;
+}
+
+.deux 
+{
+    grid-column: 2 / 2;
+    grid-row: 1 / 2;
+    height: 230px;
+}
+
+.deux img
+{
+    height: 77%;
+}
+
+.trois
+{
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    height: 152px;
+    margin-bottom: 0;
+    margin-top: 35px;
+}
+
+.trois h3
+{
+    margin-top: 13px;
+}
+
+
+.quatre
+{
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+    height: 460px;
+}
+
+.cinq
+{
+    grid-column: 4;
+    grid-row: 1;
+    height: 175px;
+    margin-bottom: 28px;
+}
+
+.six
+{
+    grid-column: 4;
+    grid-row: 1;
+    height: 208px;
+    margin-bottom: 0;
+    margin-top: 20px;
+    position: relative;
+    bottom: -5px;
+}
+
+.six img 
+{
+    height: 75%;
+}
+
+.grande
+{
+    height: 418px;
+}
+
+footer
+{
+    background-color: #f2f2f2;
+    margin: 0;
+    font-family: "Raleway", sans-serif;
+}
+
+footer li
+{
+    font-size: 15px;
+    list-style-type: none;
+    margin: 0;
+}
+
+footer h3
+{
+    font-size: 16px;
+    margin-left: 16px;
+}
+
+#conteneurf
+{
+    display: flex;
+    padding: 34px;
+}
+
+.sfooter 
+{
+    margin-right: 205px;
+}
+
+.lienfooter:any-link
+{
+    text-decoration: none;
+    color: black;
+}
+
+.lienfooter:hover 
+{
+    text-decoration: underline;
+}
+
+/* Responsive */
+
+@media all and (min-width: 320px) and (max-width: 420px) {
+    .header {
+        display: grid;
+        grid-template-rows: 59px 59px 2px;
+        grid-template-columns: 162px; 
+    } 
+    
+    main {
+        margin-left: 0;
+    }
+
+    .blueline {
+        grid-row: 3;
+        background-color: #0065FC;
+    }
+
+    .greyline {
+        grid-row: 3;
+        grid-column: 2;
+        background-color: #f2f2f2;
+    }
+
+    .logo {
+        padding: 0;
+        margin-left: 20px;
+    }
+
+    .logo img {
+        padding: 0;
+        width: 82%;
+    }
+
+    .nav {
+        display: grid;
+        grid-template-columns: 162px 155px;
+        width: 20em;
+        grid-row: 2;
+        grid-column: 1;
+    }
+
+    
+    
+    #mapmarker {
+        display: flex;
+        padding: 12px 12px;
+        flex-direction: column-reverse;
+        align-items: center;
+        padding-left: 15px;
+        
+    }
+
+    .form {
+        display: flex;
+        margin: 15px 14px 38px 15px;
+    }
+    
+    .search {
+        width: 185px;
+        height: 42px;
+    }
+    
+    .recherche {
+        width: 42px;
+        height: 41px;
+        border-radius: 14px;
+        padding: 4px;
+    }
+
+    .buttonRecherche {
+        display: none;
+    }
+
+    #searchbutton {
+        display: flex;
+        padding-left: 9px;
+    }
+
+    #filtres h2 {
+        line-height: 0;
+        float: none;
+    }
+
+    .signup {
+        grid-row: 1;
+        grid-column: 2;
+        align-items: center;
+        flex-direction: row-reverse;
+        padding-right: 18px;
+    }
+
+    .lienheader {
+        margin-left: 32px;
+        margin-right: 26px;
+    }
+    
+    main h1 {
+        font-size: 19px;
+        margin: 21px 33px 15px 17px;
+    }
+    
+    .info {
+        margin: 1em 0 1em 0;
+    }
+
+    .info div 
+    {
+        height: 40px;
+        width: 40px;
+        margin: 8px;    
+    }
+
+    .information {
+        font-size: smaller;
+        margin-left: 0;
+    }
+
+    .paragraphe {
+        margin-left: 17px;
+        font-size: 14px;
+    }
+    
+    .diffilters {
+        height: 44px;
+        width: fit-content;
+        font-size: 13px;
+        margin-right: 19px;
+        margin-top: 13px;
+    }
+
+    .diffilters i {
+        padding: 9px;
+        height: 28px;
+        margin: -11px;
+        min-width: 28px;
+    }
+
+    .filtres {
+        flex-wrap: wrap;
+        margin-left: 8px;
+    }
+    
+    .filtres p {
+        padding-left: 8px;
+    }
+
+    #filtres {
+        margin-left: 11px;
+    }
+
+    .hebergement {
+        background-color: white;
+        height: unset;
+        padding-left: 0;
+    }
+
+    .firstline {
+        grid-template-columns: 0%;
+        margin-left: 22px;
+    }
+
+    .firstline figure {
+        width: 270px;
+        margin-bottom: -16px;
+        height: 151px;
+    }
+
+    .populaire { 
+        display: grid;
+        width: 320px;
+        height: 540px;
+        left: 0;
+        bottom: 0;
+        grid-row: 1;
+        border-radius: 0;
+        
+    }
+
+    #img {
+        width: 124px;
+    }
+
+    .lespopulaires p {
+        font-size: 13px;
+    }
+
+    .contenuhebergement ul { 
+        font-size: 12px;
+    }
+
+    .populaire img {
+        height: 83%;
+        width: 40%;
+    }
+
+    .lespopulaires {
+        width: 288px;
+        height: 133px;
+        margin-left: 15px;
+    }
+     
+    .contenuhebergement {
+        display: revert;
+    }
+
+    ;.contenuhebergement h2 {
+        font-size: 18px;
+    }
+    
+    #afficher {
+        padding-left: 0%;
+    }
+
+    #activite {
+        display: flex;
+        flex-direction: column;
+        margin-left: 19px;
+    }
+
+    #activite figure {
+        height: 158px;
+        margin: 21px 0px;
+        width: 290px;
+    }
+
+    .activite {
+        display: block;
+    }
+    
+    .activite img {
+        height: 69%;
+    }
+
+    #conteneurf {
+        display: block;
+        margin-top: 40px;
+        font-size: 9px;
+    }
+
+    .hebergement {
+        display: grid;
+    }
+    
+    .lespopulaires h3 {
+        font-size: 15px;
+    }
+    .firstline h3 { 
+        font-size: 14px;
+        margin-top: 1px;
+        margin-bottom: 1px;
+    }
+
+    .firstline p { 
+        font-size: 12px;
+        margin-bottom: -4px;
+    }
+
+    footer li {
+        width: 212px;
+    }
+
+    footer h3 { 
+        margin-left: 10px;
+    }
+
+    .sfooter {
+        margin-right: 0;
+    }
+}
+
